--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.29.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-tiny-link": "^3.6.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
